--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ A{text-decoration:none}
 
 <p style="text-align: center;">&nbsp;</p>
 
-<p style="text-align: center;"><img alt="" src="https://framekomputer.com/images/btm.png" style="width: 1000px; height: 190px;" /></p>
+<p style="text-align: center;"><img alt="" src="https://imgur.com/SEj5QM4" style="width: 1000px; height: 190px;" /></p>
 </body>
 </html>
