--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ A{text-decoration:none}
 
 <p style="text-align: center;">&nbsp;</p>
 
-<p style="text-align: center;"><blockquote class="imgur-embed-pub" lang="en" data-id="a/C8Nsg48" data-context="false" ><a href="//imgur.com/a/C8Nsg48"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>" style="width: 1000px; height: 190px;" /></p>
+<p style="text-align: center;"><img alt="" src="https://i.imgur.com/SEj5QM4.png" style="width: 1000px; height: 190px;" /></p>
 </body>
 </html>
