--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ A{text-decoration:none}
 
 <p style="text-align: center;">&nbsp;</p>
 
-<p style="text-align: center;"><img alt="" src="https://i.imgur.com/SEj5QM4.png" style="width: 1000px; height: 190px;" /></p>
+<p style="text-align: center;"><img alt="" src="https://raw.githubusercontent.com/flyingblueduck313/bharany.com/f0c3b1c60a7d0d38921b071dd5cab164a685cb2a/btm.png" style="width: 1000px; height: 190px;" /></p>
 </body>
 </html>
